Tue Aug 22 10:09:29 1995  Alexander Dupuy  <dupuy@smarts.com>

	* rcs.c (whitespace): Cast to unsigned char in case char is signed
	and value is negative.

Tue Aug 22 10:09:29 1995  Kirby Koster  <koster@sctc.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (join_file): If vers->vn_user is NULL, just return.

Tue Aug 22 10:09:29 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c, client.c: Add comments about modes and umasks.

Mon Aug 21 16:11:16 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* sanity.sh (basic1): Make sure first-dir is deleted before
	running this set of tests.

Mon Aug 21 12:54:14 1995  Rick Sladkey  <jrs@world.std.com>

	* update.c (update_filesdone_proc): If pipeout, don't try to
	create CVS/Root.

Mon Aug 21 12:54:14 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (start_rsh_server): Don't pass -d to "cvs server"
	invocation via rsh.

	* server.c (serve_root): Report errors via pending_error_text.
	(serve_valid_requests): Check for pending errors.

Sun Aug 20 00:59:46 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h.in: Document usage of DIFF in update.c
	* update.c: Use DIFF -c, not DIFF -u.  The small improvement in
	diff size is not worth the hassle in terms of everyone having to
	make sure that DIFF is GNU diff (IMHO).

Sat Aug 19 22:05:46 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* recurse.c (start_recursion): Doc fix.

	* server.c (do_cvs_command): Clear error_use_protocol in the
	child.
	(server): Set error_use_protocol.

Sun Aug 13 15:33:37 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (do_cvs_command): Don't select on exceptions.

Fri Aug  4 00:13:47 1995  Jim Meyering  (meyering@comco.com)

	* Makefile.in (LDFLAGS): Set to @LDFLAGS@.
	(options.h): Depend on ../config.status and options.h.in.
	Add rule to build it from dependents.

	* add.c: Include save-cwd.h.
	(add_directory): Use save_cwd and restore_cwd instead of
	explicit getwd then chdir.